continuing work on the page

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
 					<div class="section-heading">
-					 <h2>Works</h2>
-					 <p>Dicunt tamquam dissentiet vix ex, ne mei dico reformidans, accumsan gloriatur necessitatibus eu sit.</p>
+					 <h2>Completed Modules</h2>
+					 <p>Take a look at these modules which have been completed using the template</p>
 					</div>
 				  </div>
 			  </div>
@@ -171,15 +171,15 @@
 					<ul class="lb-album">
 						<li>
 							<a href="#image-1">
-								<img src="img/works/thumbs/1.jpg" alt="">
+								<img src="img/modules/thumbs/js.png" alt="" width="150px">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-1">
 								<a href="#page" class="lb-close">X</a>
-								<img src="img/works/1.jpg" alt="" />
+								<img src="img/modules/JSlarge.jpg" alt="" />
 								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
+									<h3>Intro to Javascript</h3>
+									<p>A look at the basics from setting it up to Booleans and Variables by <a href="http://marcscott.github.io/KS3_Curriculum/Year_7/JavaScript/1_Lesson.html">Marc Scott</a></p>
 								</div>
 
 							</div>
