cleaned up modules

--- a/index.html
+++ b/index.html
@@ -154,148 +154,49 @@
 		</div>
 	</section>
 	-->
-	 <!-- Works -->
-	<section id="works" class="home-section bg-white">
-			<div class="container">
+	 <!-- completed moduled -->
+	  <section id="about" class="home-section bg-white">
+		<div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
 					<div class="section-heading">
 					 <h2>Completed Modules</h2>
-					 <p>Take a look at these modules which have been completed using the template</p>
+					 <p>Take a look at some example modules which have been completed using the template</p>
 					</div>
 				  </div>
 			  </div>
-				<div class="row">
-					<div class="col-md-offset-2 col-md-8">
-
-					<ul class="lb-album">
-						<li>
-							<a href="#image-1">
-								<img src="img/modules/thumbs/js.png" alt="" width="150px">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-1">
-								<a href="#page" class="lb-close">X</a>
-								<img src="img/modules/JSlarge.jpg" alt="" />
-								<div>
-									<h3>Intro to Javascript</h3>
-									<p>A look at the basics from setting it up to Booleans and Variables by <a href="http://marcscott.github.io/KS3_Curriculum/Year_7/JavaScript/1_Lesson.html">Marc Scott</a></p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-2">
-								<img src="img/works/thumbs/2.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-2">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/2.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-3">
-								<img src="img/works/thumbs/3.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-3">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/3.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-4">
-								<img src="img/works/thumbs/4.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-4">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/4.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-
-						<li>
-							<a href="#image-5">
-								<img src="img/works/thumbs/5.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-5">
-								<a href="#page" class="lb-close">X</a>
-								<img src="img/works/5.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-6">
-								<img src="img/works/thumbs/6.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-6">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/6.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-7">
-								<img src="img/works/thumbs/7.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-7">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/7.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-						<li>
-							<a href="#image-8">
-								<img src="img/works/thumbs/8.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-8">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="img/works/8.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-
-							</div>
-						</li>
-					</ul>
-
+			  <div class="row">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+					<div class="box-team wow">
+                    <img src="img/modules/thumbs/js.png" alt="" class="img-responsive" />
+                    <h4><a href="http://marcscott.github.io/7-WD-JS/pages/1_Lesson.html">Introduction to Javascript</a></h4>
+                    <p>by <a href="https://github.com/MarcScott">Marc Scott</a></p>
 					</div>
-				</div>
-			</div>
-		</section>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
+					<div class="box-team wow">
+                    <img src="img/modules/thumbs/html.png" alt="" class="img-responsive" />
+                    <h4>Starting with Bootstrap</h4>
+                    <p>by Brian Sharland</p>
+					</div>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
+					<div class="box-team wow">
+                    <img src="img/team/3.jpg" alt="" class="img-responsive" />
+                    <h4>More Coming Soon</h4>
+                    <p>...</p>
+					</div>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
+					<div class="box-team wow">
+                    <img src="img/team/4.jpg" alt="" class="img-responsive" />
+                    <h4>More Coming Soon</h4>
+                    <p>...</p>
+					</div>
+                </div>
+			  </div>			  
+		  </div>	  
+	  </section>
 
 		<!-- spacer 2 -->
 		<section id="spacer2" class="home-section spacer">
