--- a/index.html
+++ b/index.html
@@ -11,28 +11,19 @@
 	<script src="js/modernizr.custom.js"></script>
       </head>
   <body>
+	<!-- menu -->
 	<div class="menu-area">
 			<div id="dl-menu" class="dl-menuwrapper">
 						<button class="dl-trigger">Open Menu</button>
 						<ul class="dl-menu">
-							<li>
-								<a href="#intro">Home</a>
-							</li>
-							<li><a href="#about">About</a></li>
-							<li><a href="#services">Services</a></li>
-							<li><a href="#works">Works</a></li>
-							<li><a href="#contact">Contact</a></li>
-							<li>
-								<a href="#">Sub Menu</a>
-								<ul class="dl-submenu">
-									<li><a href="#">Sub menu</a></li>
-									<li><a href="#">Sub menu</a></li>
-								</ul>
-							</li>
+							<li><a href="#intro">Home</a></li>
+							<li><a href="#how">How it works?</a></li>
+							<li><a href="#modules">Example Modules</a></li>
+							<li><a href="#resources">Resources</a></li>
 						</ul>
 					</div><!-- /dl-menuwrapper -->
 	</div>
-
+	<!-- end menu -->
 	  <!-- intro area -->
 	  <div id="intro">
 	  	<a href="https://github.com/sharland/ComputingModule"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
@@ -68,7 +59,7 @@
             </div>
 		</section>
 <!-- How it works -->
-	  <section id="about" class="home-section bg-gray">
+	  <section id="how" class="home-section bg-gray">
 		<div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
@@ -106,56 +97,9 @@
 			  </div>			  
 		  </div>	  
 	  </section>
-	  <!-- Services
-	 <section id="services" class="home-section bg-white">
-		<div class="container">
-			  <div class="row">
-				  <div class="col-md-offset-2 col-md-8">
-					<div class="section-heading">
-					 <h2>Services</h2>
-					 <p>Est te congue scaevola comprehensam. No pri simul decore, in partem electram voluptatibus vel esse facer.</p>
-					</div>
-				  </div>
-			  </div>
-			  <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-					<div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-						<i class="fa fa-code fa-4x"></i>
-						<h4>Valid HTML5</h4>
-						<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-						<a class="btn btn-primary">Learn more</a>
-					</div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
-					<div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-						<i class="fa fa-cog fa-4x"></i>
-						<h4>Easy to Customize</h4>
-						<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-						<a class="btn btn-primary">Learn more</a>
-					</div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
-					<div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-						<i class="fa fa-desktop fa-4x"></i>
-						<h4>Responsive Layout</h4>
-						<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-						<a class="btn btn-primary">Learn more</a>
-					</div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
-					<div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-						<i class="fa fa-dropbox fa-4x"></i>
-						<h4>Ready to use</h4>
-						<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-						<a class="btn btn-primary">Learn more</a>
-					</div>
-                </div>
-			  </div>
-		</div>
-	</section>
-	-->
-	 <!-- completed moduled -->
-	  <section id="about" class="home-section bg-white">
+
+	 <!-- completed modules -->
+	  <section id="modules" class="home-section bg-white">
 		<div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
@@ -198,28 +142,14 @@
 		  </div>	  
 	  </section>
 
-		<!-- spacer 2 -->
-		<section id="spacer2" class="home-section spacer">
-           <div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="color-light">
-						<h2 class="wow bounceInDown" data-wow-delay="1s">Details are the key for perfection</h2>
-						<p class="lead wow bounceInUp" data-wow-delay="2s">We mix all detailed things together</p>
-						</div>
-					</div>
-				</div>
-            </div>
-		</section>
-
-	 <!-- Contact -->
-	  <section id="contact" class="home-section bg-white">
+	 <!-- Resources and Links-->
+	  <section id="contact" class="home-section bg-gray">
 	  	<div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
 					<div class="section-heading">
-					 <h2>Contact us</h2>
-					 <p>Contact via form below and we will be get in touch with you within 24 hours. </p>
+					 <h2>Resources and Links</h2>
+					 <p>If you are new to teaching Computing and would like some help getting started with some of the </p>
 					</div>
 				  </div>
 			  </div>
@@ -290,7 +220,6 @@
 					</ul>
 				</div>
 			</div>
-
 	  	</div>
 	  </section>
 <!-- footer -->
