added first panel on github

--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse" style="height: 0px;">
                             <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <p>Github is a web-based hosting service for code projects stored in repositories.  It's used by developers to store open-source work which can then be easily tracked, shared and collaborated on with many others.  As an example of good industry practice it is a great way to get pupils involved with the open-source development community.  It also makes sense therefore to develop your own resources using Github.</p>
+                                <p>To get started with Github I would suggest the following resources:</p>
+                                	<p><a href="https://education.github.com">education.github.com</a></p>
+                                	<p><a href="https://delicious.com/briansharland/search/github">My Github links on Delicious</a></p>
+                                	<p><a href="https://try.github.io/levels/1/challenges/1">Try Github</a></p>
                             </div>
                         </div>
                     </div>
@@ -213,16 +217,13 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
 
             </div>
 			<div class="col-lg-2">
 				
 			</div>
-
+<!-- social networks -->
         </div>
 			<div class="row mar-top30 ">
 				<div class="col-md-offset-2 col-md-8">
