added another panel to resources

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 					<div class="box-team wow bounceInDown" data-wow-delay="0.1s">
                     	<i class="fa fa-download fa-4x"></i>
-                    	<h6>Download module as a zip from here</h6>
+                    	<h6>Download module as a zip from <a href="https://github.com/sharland/ComputingModule/archive/master.zip">here</a></h6>
 					</div>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
@@ -85,13 +85,13 @@
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
 					<div class="box-team wow bounceInDown">
                     	<i class="fa fa-upload fa-4x"></i>
-                    	<h6>Upload it to a public location such as Github</h6>
+                    	<h6>Upload it to a public location such as <a href="http://github.com">Github</a></h6>
 					</div>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
 					<div class="box-team wow bounceInDown">
 						<i class="fa fa-share-square-o fa-4x"></i>
-                    	<h6>Share a link to your completed module through CaS</h6>
+                    	<h6>Share a link to your completed module through <a href="http://computingatschool.org.uk">CaS</a></h6>
 					</div>
                 </div>
 			  </div>			  
@@ -203,7 +203,8 @@
                         </div>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <p>If you are looking for a community of like-minded educators who are grappling with (and winning!) issues to do with teaching Computing in schools then this is the best place to go.  With many online resources and forums as well as real-world training days, conferences and the famous CasHub you will not lack for ideas, inspiration and best of all a chance to share what you have done yourself.
+                                	<p><a href="http://www.computingatschool.org.uk">Computing at School</a></p></p>
                             </div>
                         </div>
                     </div>
@@ -211,12 +212,13 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Collecting and sharing with Delicious</a>
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Collecting and sharing with Delicious.com</a>
                             </h4>
                         </div>
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <p>Delicious.com is a social bookmarking website for collecting links from the Internet.  It works very well as a tool for gathering favourites from twitter and then once you have manually tagged them, sharing those links becomes very easy.  As a tool for tracking online resources it is absolutely essential.</p>
+                                <p><a href="http://delicious.com">Delicious Social Bookmarking</a></p>
                             </div>
                         </div>
                     </div>
