bunch of changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="col-md-4"></div>
 						<div class="col-md-4">
 							<div class="brand">
-								<h1 style="color:white;">KS3 Computing Module Template</h1>
+								<h1 class="whiteheading">KS3 Computing Module Template</h1>
 								<div class="line-spacer"></div>
 								<p><span>A simple structure for developing and sharing KS3 Computing modules</span></p>
 							</div>
@@ -52,7 +52,7 @@
 					<div class="col-md-12">
 						<div class="color-light">
 						<h2 class="wow bounceInDown" data-wow-delay="0.2s">About this Module template</h2>
-						<p class="lead wow bounceInUp" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others</p>
+						<p class="lead wow bounceInUp" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others.  This is about giving you a framework to continue developing your own work for your school but know that it is usable and shareable with others and you incorporate what others do into your own work.</p>
 						</div>
 					</div>
 				</div>
@@ -124,7 +124,7 @@
                     <p>by Brian Sharland</p>
 					</div>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
+                <!-- <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
 					<div class="box-team wow">
                     <img src="img/team/3.jpg" alt="" class="img-responsive" />
                     <h4>More Coming Soon</h4>
@@ -137,13 +137,13 @@
                     <h4>More Coming Soon</h4>
                     <p>...</p>
 					</div>
-                </div>
+                </div> -->
 			  </div>			  
 		  </div>	  
 	  </section>
 
 	 <!-- Resources and Links-->
-	  <section id="contact" class="home-section bg-gray">
+	  <section id="resources" class="home-section bg-gray">
 	  	<div class="container">
 			  <div class="row">
 				  <div class="col-md-offset-2 col-md-8">
@@ -228,34 +228,24 @@
 			<div class="col-lg-2">
 				
 			</div>
-<!-- social networks -->
         </div>
+		</section>
+<!-- social networks -->
+		<section id="spacer2" class="home-section spacer">
 			<div class="row mar-top30 ">
 				<div class="col-md-offset-2 col-md-8">
-					<h5>We're on social networks</h5>
+					<h5 class="whiteheading">Contact Options</h5>
 					<ul class="social-network">
-						<li><a href="#">
+						<li><a href="http://briansharland.com">
 						<span class="fa-stack fa-2x">
 							<i class="fa fa-circle fa-stack-2x"></i>
-							<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+							<i class="fa fa-globe fa-stack-1x fa-inverse"></i>
 						</span></a>
 						</li>
-						<li><a href="#">
-						<span class="fa-stack fa-2x">
-							<i class="fa fa-circle fa-stack-2x"></i>
-							<i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
-						</span></a>
-						</li>
-						<li><a href="#">
+						<li><a href="http://twitter.com/sharland">
 						<span class="fa-stack fa-2x">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-						</span></a>
-						</li>
-						<li><a href="#">
-						<span class="fa-stack fa-2x">
-							<i class="fa fa-circle fa-stack-2x"></i>
-							<i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
 						</span></a>
 						</li>
 					</ul>
