--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="color-light">
-						<h2 class="wow bounceInDown" data-wow-delay="0.2s">About this Module template</h2>
-						<p class="lead wow bounceInUp" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others.  This is about giving you a framework to continue developing your own work for your school but know that it is usable and shareable with others and you incorporate what others do into your own work.</p>
+						<h2 class="wow bounceInDown textshadow" data-wow-delay="0.2s">About this Module template</h2>
+						<p class="lead wow bounceInUp textshadow" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others.  This is about giving you a framework to continue developing your own work for your school but know that it is usable and shareable with others and you incorporate what others do into your own work.</p>
 						</div>
 					</div>
 				</div>
@@ -234,7 +234,7 @@
 		<section id="spacer2" class="home-section spacer">
 			<div class="row mar-top30 ">
 				<div class="col-md-offset-2 col-md-8">
-					<h5 class="whiteheading">Contact Options</h5>
+					<h5 class="whiteheading textshadow">Contact Options</h5>
 					<ul class="social-network">
 						<li><a href="http://briansharland.com">
 						<span class="fa-stack fa-2x">
