--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="col-md-12">
 						<div class="color-light">
 						<h2 class="wow bounceInDown textshadow" data-wow-delay="0.2s">About this Module template</h2>
-						<p class="lead wow bounceInUp textshadow" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others.  This is about giving you a framework to continue developing your own work for your school but know that it is usable and shareable with others and you incorporate what others do into your own work.</p>
+						<p class="lead wow bounceInUp textshadow" data-wow-delay="0.5s">This template is designed to enable teachers to create their own modules for KS3 Computing, share them and then use modules developed by others.  This is about giving you a framework to continue developing your own work for your school but know that it is usable and shareable with others and you can incorporate what others do into your own curriculum.</p>
 						</div>
 					</div>
 				</div>
