--- a/Lessons/webFiles/portfolio-1-col.html
+++ b/Lessons/webFiles/portfolio-1-col.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>One Column Portfolio - Modern Business - Start Bootstrap Template</title>
+    <title>Computing Module Title</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Modern Business</a>
+                <a class="navbar-brand" href="index.html"><i class="fa fa-desktop"></i> KS3 Computing</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -93,31 +93,30 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h1 class="page-header">One Column Portfolio
-                    <small>Showcase Your Work</small>
+                <h1 class="page-header">Module Heading
+                    <small>by author</small>
                 </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">One Column Portfolio</li>
-                </ol>
+
             </div>
 
         </div>
 
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
+            <div class="col-md-6">
+                <a href="#">
                     <img class="img-responsive" src="http://placehold.it/750x350">
                 </a>
             </div>
 
-            <div class="col-md-5">
-                <h3>Project Name</h3>
-                <h4>Subheading</h4>
-                <p><a href="http://www.bbc.co.uk">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project <i class="fa fa-angle-right"></i></a>
+            <div class="col-md-6">
+                <h3>Lesson Title</h3>
+                <h4>Lesson 1</h4>
+                <p>Lesson content introduction</p>
+                <div class="btn-group">
+                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+            	</div>
             </div>
 
         </div>
@@ -126,17 +125,20 @@
 
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
+            <div class="col-md-6">
+                <a href="#">
                     <img class="img-responsive" src="http://placehold.it/750x350">
                 </a>
             </div>
 
-            <div class="col-md-5">
-                <h3>Project Name</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project <i class="fa fa-angle-right"></i></a>
+            <div class="col-md-6">
+                <h3>Lesson Title</h3>
+                <h4>Lesson 2</h4>
+                <p>Lesson content introduction</p>
+                <div class="btn-group">
+                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+            	</div>
             </div>
 
         </div>
@@ -145,17 +147,20 @@
 
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
+            <div class="col-md-6">
+                <a href="#">
                     <img class="img-responsive" src="http://placehold.it/750x350">
                 </a>
             </div>
 
-            <div class="col-md-5">
-                <h3>Project Name</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project <i class="fa fa-angle-right"></i></a>
+            <div class="col-md-6">
+                <h3>Lesson Title</h3>
+                <h4>Lesson 3</h4>
+                <p>Lesson content introduction</p>
+                <div class="btn-group">
+                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+            	</div>
             </div>
 
         </div>
@@ -164,17 +169,20 @@
 
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
+            <div class="col-md-6">
+                <a href="#">
                     <img class="img-responsive" src="http://placehold.it/750x350">
                 </a>
             </div>
 
-            <div class="col-md-5">
-                <h3>Project Name</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project <i class="fa fa-angle-right"></i></a>
+            <div class="col-md-6">
+                <h3>Lesson Title</h3>
+                <h4>Lesson 4</h4>
+                <p>Lesson content introduction</p>
+                <div class="btn-group">
+                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+            	</div>
             </div>
 
         </div>
@@ -183,42 +191,20 @@
 
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
+            <div class="col-md-6">
+                <a href="#">
                     <img class="img-responsive" src="http://placehold.it/750x350">
                 </a>
             </div>
 
-            <div class="col-md-5">
-                <h3>Project Name</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project <i class="fa fa-angle-right"></i></a>
-            </div>
-
-        </div>
-
-        <hr>
-
-        <div class="row text-center">
-
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li><a href="#">&laquo;</a>
-                    </li>
-                    <li class="active"><a href="#">1</a>
-                    </li>
-                    <li><a href="#">2</a>
-                    </li>
-                    <li><a href="#">3</a>
-                    </li>
-                    <li><a href="#">4</a>
-                    </li>
-                    <li><a href="#">5</a>
-                    </li>
-                    <li><a href="#">&raquo;</a>
-                    </li>
-                </ul>
+            <div class="col-md-6">
+                <h3>Lesson Title</h3>
+                <h4>Lesson 5</h4>
+                <p>Lesson content introduction</p>
+                <div class="btn-group">
+                	<a class="btn btn-primary" href="#">Lesson Slides <i class="fa fa-angle-right"></i></a>
+                	<a class="btn btn-primary" href="#">Lesson Worksheet <i class="fa fa-angle-right"></i></a>
+            	</div>
             </div>
 
         </div>
