--- a/Lessons/webFiles/portfolio-1-col.html
+++ b/Lessons/webFiles/portfolio-1-col.html
@@ -35,39 +35,8 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse" >
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="about.html">About</a>
-                    </li>
-                    <li><a href="services.html">Services</a>
-                    </li>
-                    <li><a href="contact.php">Contact</a>
-                    </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li class="active"><a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li><a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li><a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li><a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li><a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li><a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li><a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Useful Links <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="full-width.html">Full Width Page</a>
                             </li>
